src/objects/IVAPIAlert__c.object
<CustomObject>
    <description>Capture API alerts via web hook in IV system through API endpoint.</description>
    <fields>
        <fullName>AccountInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account to which News is related to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IVAPIAlerts</relationshipLabel>
        <relationshipName>IVAPIAlerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alert_CreatedDateTime__c</fullName>
        <label>Alert_CreatedDateTime</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyId__c</fullName>
        <label>CompanyId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agent__c</fullName>
        <label>agent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alertId__c</fullName>
        <label>alertId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>publicationDate__c</fullName>
        <label>publicationDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <label>source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <label>url</label>
        <type>TextArea</type>
    </fields>
    <label>IVAPIAlert</label>
    <nameField>
        <displayFormat>Alert-{0000}</displayFormat>
        <label>IVAPIAlert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IVAPIAlerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>